fix scrollbar main page

--- a/src/Pages/HomePage/HomeComponent/TradingPlatformLayout/tradingPlatform.module.scss
+++ b/src/Pages/HomePage/HomeComponent/TradingPlatformLayout/tradingPlatform.module.scss
@@ -37,6 +37,7 @@
     @include flexcol('s');
     align-items: center;
     text-align: center;
+    font-weight: 400;
     z-index: 0;
     @include padding-for-mobile;
 
