--- a/src/Views/Button/styles/AccentVariant.module.scss
+++ b/src/Views/Button/styles/AccentVariant.module.scss
@@ -6,7 +6,7 @@
     outline: none;
     text-transform: uppercase;
     font-size: 14px;
-    font-weight: bold;
+    // font-weight: bold;
     color: var(--gx-color-primary);
     line-height: 140%;
     letter-spacing: .1em;
