--- a/src/Views/Title/title.module.scss
+++ b/src/Views/Title/title.module.scss
@@ -15,7 +15,7 @@
     @extend %font-title;
     text-align: center;
     font-style: normal;
-    font-weight: bold;
+    font-weight: 900;
     font-size: 38px;
     letter-spacing: 0.08em;
     text-transform: uppercase;
