--- a/src/styles/fonts/index.scss
+++ b/src/styles/fonts/index.scss
@@ -70,7 +70,7 @@
 }
 %font-title {
   // font-family: 'Cormorant Garamond', sans-serif;
-  font-family: 'Manrope';
+  font-family: 'Cormorant Garamond';
 }
 %heading {
   font-weight: bold;
