--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -49,7 +49,7 @@ h3,
 h4,
 h5,
 h6 {
-  @extend %font-head;
+  // @extend %font-head;
 }
 
 body, html {
